# reasonance

./: .gitignore  ARGUMENTS.md  NOTES.md  README.md  WISHES.md  pyproject.toml
reasonance-web/: README.md  package.json  pnpm-lock.yaml
reasonance-web/src/: App.css  App.tsx  config.ts  types.ts
reasonance-web/src/components/: ArgumentGraph.tsx  ChatPanel.tsx  Navbar.tsx
reasonance-web/src/hooks/: useAudioRecorder.ts  useErrorHandler.ts  useSessionEvents.ts  useSessionManagement.tsx
src/archive/: ok.py  stream.py  turn_client.py  turns.py
src/reasonance/: __init__.py  api.py  argument_mapper.py  claude_client.py  config.py  models.py  selection_analyzer.py  session_manager.py  types.py
